crates/vexor-compiler/tests/golden/error/input/nth_oob.vx
-- index out of bounds
export Circle(nth(9)([1, 2, 3]))
